--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -9,7 +9,7 @@ $dark_base_color: #111;
 
 $base_color: if($variant == 'light', #FFFFFF, $dark_base_color);
 $text_color: if($variant == 'light', #3C3C3C, white);
-$bg_color: if($variant == 'light', #e3dedb, $dark_bg_color); //#eae8e8
+$bg_color: if($variant == 'light', #e2e2e0, $dark_bg_color); //#eae8e8
 $fg_color: if($variant == 'light', #4c4c4c, $dark_fg_color);
 
 $selected_fg_color: #ffffff;
@@ -50,7 +50,7 @@ $shadow_color: transparentize(black, 0.9);
 $drop_target_color: #4e9a06;
 
 // Headerbar color
-$header_bg: if($darker == 'true', $dark_bg_color, $bg_color);
+$header_bg: if($darker == 'true', $dark_bg_color, darken($bg_color, 10%));
 
 //insensitive state derived colors
 $insensitive_fg_color: mix($fg_color, $bg_color, 50%);
