--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -13,7 +13,7 @@ $bg_color: if($variant == 'light', #e2e2e0, $dark_bg_color); //#eae8e8
 $fg_color: if($variant == 'light', #4c4c4c, $dark_fg_color);
 
 $selected_fg_color: #ffffff;
-$selected_bg_color: #fb6155; //#f07746
+$selected_bg_color: #fb6f55; //#fb6155;
 $selected_borders_color: darken($selected_bg_color, 20%);
 $borders_color: if($variant == 'light', darken($bg_color,15%), $dark_borders_color);
 $borders_edge: if($variant == 'light', white, transparentize($fg_color, 0.9));
