--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -164,7 +164,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     border-top-color: darken($b, 15%);
   }
   @else if $s == active-dark {
-    box-shadow: inset 0 0 0 1px $bsa1, inset 0 2px $bsa2, inset 0 -3px $selected_bg_color;
+    box-shadow: inset 0 0 0 1px $bsa1, inset 0 2px $bsa2;
     border-color: transparent;
   }
   @else if $s == focus {
@@ -442,7 +442,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else { box-shadow: none; }
 }
 
-@mixin headerbar_fill($c:$header_bg, $hc:transparentize(white, 0.92), $s1:transparentize(black, 0.8), $s2:transparentize(black, 0.85)) {
+@mixin headerbar_fill($c:$header_bg, $hc:transparentize(white, 0.92), $s1:transparentize(black, 0.9), $s2:transparentize(black, 0.95)) {
 //
 // headerbar fill
 //
@@ -454,9 +454,9 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   background-color: $c;
   box-shadow: 
     inset 0 1px $hc,
-    inset 0 -1px $s1,
-    0 1px $s1,
-    0 2px $s2;
+    inset 0 -1px if($darker=='true', transparent, $s2),
+    0 1px if($darker=='true', transparent, $s1),
+    0 2px if($darker=='true', transparent, $s2);
 }
 
 @mixin ssd_fill($c:$header_bg, $hc:transparentize(white, 0.92)) {
