--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -486,7 +486,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 .inline-toolbar, searchbar > revealer > box, .location-bar { background-color: #c9c9c6; }
 
 /*************** Header bars * */
-.titlebar:not(headerbar), headerbar { padding: 0 4px; min-height: 38px; border-width: 0; border-style: solid; border-color: #bdbdb8; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.08), inset 0 -1px rgba(0, 0, 0, 0.2), 0 1px rgba(0, 0, 0, 0.2), 0 2px rgba(0, 0, 0, 0.15); }
+.titlebar:not(headerbar), headerbar { padding: 0 4px; min-height: 38px; border-width: 0; border-style: solid; border-color: #bdbdb8; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.08), inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
 
 .titlebar:backdrop:not(headerbar), headerbar:backdrop { border-color: #bdbdb8; background-image: none; color: #979796; }
 
@@ -494,7 +494,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .titlebar:not(headerbar) .subtitle, headerbar .subtitle { font-size: smaller; padding-left: 12px; padding-right: 12px; }
 
-.selection-mode.titlebar:not(headerbar), headerbar.selection-mode { color: #ffffff; text-shadow: 0 -1px rgba(0, 0, 0, 0.5); border-color: #e52805; background-color: #fb6f55; box-shadow: inset 0 1px #fdb7aa, inset 0 -1px rgba(0, 0, 0, 0.2), 0 1px rgba(0, 0, 0, 0.2), 0 2px rgba(0, 0, 0, 0.15); }
+.selection-mode.titlebar:not(headerbar), headerbar.selection-mode { color: #ffffff; text-shadow: 0 -1px rgba(0, 0, 0, 0.5); border-color: #e52805; background-color: #fb6f55; box-shadow: inset 0 1px #fdb7aa, inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
 
 .selection-mode.titlebar:backdrop:not(headerbar), headerbar.selection-mode:backdrop { background-color: #fb6f55; background-image: none; box-shadow: inset 0 1px #fdc5bb; }
 
@@ -550,9 +550,9 @@ headerbar button:hover { color: #f2f1f0; background-color: #7b7b7b; box-shadow: 
 
 headerbar button:focus, headerbar button.default { color: #f2f1f0; background-color: #fb6f55; border-color: #fb6f55; box-shadow: none; }
 
-headerbar button:checked, headerbar button:active { color: #f2f1f0; background-color: #393939; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04), inset 0 -3px #fb6f55; border-color: transparent; }
+headerbar button:checked, headerbar button:active { color: #f2f1f0; background-color: #393939; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: transparent; }
 
-headerbar button:checked:hover, headerbar button:active:hover { color: #f2f1f0; background-color: #2e2e2e; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04), inset 0 -3px #fb6f55; border-color: transparent; }
+headerbar button:checked:hover, headerbar button:active:hover { color: #f2f1f0; background-color: #2e2e2e; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: transparent; }
 
 headerbar button:disabled { background-color: transparent; color: #979796; box-shadow: none; border-color: transparent; }
 
@@ -572,7 +572,7 @@ headerbar .suggested-action:backdrop:not(:disabled) { color: #ffffff; }
 
 headerbar .linked:not(entry) button:not(:last-child):not(:only-child) { border-right-style: solid; }
 
-headerbar .linked:not(entry) button:not(:only-child) { border-radius: 0; }
+headerbar .linked:not(entry) button:not(:only-child) { border-radius: 2px; }
 
 headerbar entry, headerbar spinbutton, headerbar separator, headerbar button { margin-top: 4px; margin-bottom: 4px; }
 
@@ -594,7 +594,7 @@ window.tiled headerbar, window.tiled headerbar:first-child, window.tiled headerb
 
 window.csd > .titlebar:not(headerbar) { padding: 0; background-color: transparent; background-image: none; border-style: none; border-color: transparent; box-shadow: none; }
 
-.titlebar:not(headerbar) > separator { background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.08), inset 0 -1px rgba(0, 0, 0, 0.2), 0 1px rgba(0, 0, 0, 0.2), 0 2px rgba(0, 0, 0, 0.15); }
+.titlebar:not(headerbar) > separator { background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.08), inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
 
 /************ Pathbars * */
 .path-bar button.text-button, .path-bar button.image-button, .path-bar button { padding-left: 4px; padding-right: 4px; }
@@ -1270,7 +1270,7 @@ calendar.highlight { color: #979796; }
 calendar:indeterminate { color: alpha(currentColor,0.1); }
 
 /*********** Dialogs * */
-messagedialog .titlebar { min-height: 20px; background-image: none; background-color: #e2e2e0; border-style: none; border-top-left-radius: 2px; border-top-right-radius: 2px; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.08), inset 0 -1px rgba(0, 0, 0, 0.2), 0 1px rgba(0, 0, 0, 0.2), 0 2px rgba(0, 0, 0, 0.15); }
+messagedialog .titlebar { min-height: 20px; background-image: none; background-color: #e2e2e0; border-style: none; border-top-left-radius: 2px; border-top-right-radius: 2px; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.08), inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
 
 messagedialog.csd.background { border-bottom-left-radius: 2px; border-bottom-right-radius: 2px; }
 
