--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -49,7 +49,7 @@ $shadow_color: transparentize(black, 0.9);
 
 $drop_target_color: #4e9a06;
 
-// Headerbar color
+//headerbar color
 $header_bg: if($darker == 'true', $dark_bg_color, darken($bg_color, 2%));
 
 //insensitive state derived colors
