--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -538,7 +538,7 @@ headerbar { color: #f2f1f0; }
 
 headerbar button { color: #f2f1f0; border-width: 0; border-radius: 2px; color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: transparent; box-shadow: none; border-color: transparent; }
 
-headerbar button:hover { color: #f2f1f0; background-color: #7b7b7b; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22), inset 0 0 0 1px rgba(255, 255, 255, 0.04); }
+headerbar button:hover { color: #f2f1f0; background-color: #7b7b7b; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 headerbar button:focus, headerbar button.default { color: #f2f1f0; background-color: #fb6f55; border-color: #fb6f55; box-shadow: none; }
 
@@ -897,21 +897,21 @@ scrollbar.horizontal button.down:disabled { -gtk-icon-source: -gtk-scaled(url("a
 treeview ~ scrollbar.vertical { border-top: 1px solid #272727; margin-top: -1px; }
 
 /********** Switch * */
-switch { font-weight: bold; font-size: smaller; outline-offset: -4px; border: 1px solid #272727; border-radius: 99px; color: #f2f1f0; background-color: #404040; }
+switch { transition: background-color 100ms cubic-bezier(0, 0, 0.2, 1), opacity 250ms cubic-bezier(0, 0, 0.2, 1); margin: 6px 0; padding: 0 2px; border: 5px solid transparent; border-radius: 99px; background-color: #404040; background-clip: padding-box; font-size: 0; /*switch { font-weight: bold; font-size: smaller; outline-offset: -4px; // similar to the .scale border: 1px solid $borders_color; border-radius: 99px; color: $fg_color; background-color: $dark_fill; &:checked { color: $selected_fg_color; border-color: $selected_borders_color; background-color: $selected_bg_color; } &:disabled { color: $insensitive_fg_color; border-color: $borders_color; background-color: $insensitive_bg_color; } slider { margin: -1px; min-width: 34px; min-height: 18px; border: 1px solid; border-radius: 99px; @include button(normal-alt, $edge: $shadow_color); } &:hover slider { @include button(hover-alt, $edge: $shadow_color); } &:checked slider { border: 1px solid $selected_borders_color; } &:disabled slider { @include button(insensitive); } row:selected & { @if $variant == 'light' { box-shadow: none; border-color: $selected_borders_color; &:backdrop { border-color: $selected_borders_color; } slider:dir(rtl) { border-left-color: $borders_color; } slider:dir(ltr) { border-right-color: $borders_color; } &.slider { &:checked, & { border-color: $selected_borders_color; } } } }*/ }
 
-switch:checked { color: #ffffff; border-color: #e52805; background-color: #fb6f55; }
+switch:checked { background-color: rgba(251, 111, 85, 0.5); }
 
-switch:disabled { color: #a09f9f; border-color: #272727; background-color: #5e5d5d; }
+switch:disabled { opacity: 0.5; }
 
-switch slider { margin: -1px; min-width: 36px; min-height: 20px; border: 1px solid; border-radius: 99px; color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: #646464; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06), 0 1px rgba(18, 18, 18, 0.1); border-color: transparent; border-bottom-color: transparent; }
+switch slider { transition: all 100ms cubic-bezier(0, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0, 0, 0.2, 1); min-width: 20px; min-height: 20px; margin: -3px -2px; border-radius: 99px; box-shadow: 0 0 0 6px transparent, 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); background-color: #111; color: #f2f1f0; }
 
-switch:hover slider { color: #f2f1f0; background-color: #6c6c6c; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
+switch:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.3), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-switch:checked slider { border: 1px solid #e52805; }
+switch:focus slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.4), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-switch:disabled slider { color: #a09f9f; background-color: #5e5d5d; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }
+switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.5), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-switch:disabled slider > .label { color: inherit; }
+switch:checked slider { background-color: #fb6f55; color: #f2f1f0; }
 
 /************************* Check and Radio items * */
 .view.content-view.check:not(list), iconview.content-view.check:not(list), .nemo-window notebook.content-view.check:not(list), .content-view .tile check:not(list) { -gtk-icon-shadow: none; -gtk-icon-source: -gtk-scaled(url("assets/checkbox-selectionmode.png"), url("assets/checkbox-selectionmode@2.png")); background-color: transparent; min-width: 40px; min-height: 40px; background-image: none; transition: none; box-shadow: none; border-width: 0; }
