--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -184,7 +184,7 @@ notebook > header > tabs > arrow:focus, button:focus { color: #4c4c4c; border-co
 
 notebook > header > tabs > arrow:active:hover, notebook > header > tabs > arrow:checked:hover, button:active:hover, button:checked:hover { color: #4c4c4c; background-color: #c4c4c0; }
 
-notebook > header > tabs > arrow:active, notebook > header > tabs > arrow:checked, button:active, button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; }
+notebook > header > tabs > arrow:active, notebook > header > tabs > arrow:checked, button:active, button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; }
 
 notebook > header > tabs > arrow:disabled, button.sidebar-button:disabled, button.flat:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
@@ -242,7 +242,7 @@ button.suggested-action.flat { border-color: transparent; background-color: tran
 
 button.suggested-action:hover { color: white; background-color: #fca291; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-button.suggested-action:active, button.suggested-action:checked { color: white; outline-color: rgba(255, 255, 255, 0.3); background-color: #fa4d2d; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; }
+button.suggested-action:active, button.suggested-action:checked { color: white; outline-color: rgba(255, 255, 255, 0.3); background-color: #fa4d2d; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; }
 
 button.suggested-action.flat:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; color: rgba(251, 111, 85, 0.8); }
 
@@ -268,7 +268,7 @@ button.destructive-action.flat { border-color: transparent; background-color: tr
 
 button.destructive-action:hover { color: white; background-color: #f48a88; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-button.destructive-action:active, button.destructive-action:checked { color: white; outline-color: rgba(255, 255, 255, 0.3); background-color: #ec2e2b; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; }
+button.destructive-action:active, button.destructive-action:checked { color: white; outline-color: rgba(255, 255, 255, 0.3); background-color: #ec2e2b; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; }
 
 button.destructive-action.flat:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; color: rgba(239, 83, 80, 0.8); }
 
@@ -322,7 +322,7 @@ button.circular label { padding: 0; }
 
 .inline-toolbar toolbutton > button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-.inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; }
+.inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; }
 
 .inline-toolbar toolbutton > button:disabled { color: #979796; background-color: #d3d3d1; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }
 
@@ -504,7 +504,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .selection-mode.titlebar:not(headerbar) button:hover, headerbar.selection-mode button:hover { color: #ffffff; background-color: #fca291; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-.selection-mode.titlebar:not(headerbar) button:active, .selection-mode.titlebar:not(headerbar) button:checked, headerbar.selection-mode button:active, headerbar.selection-mode button:checked { color: #ffffff; outline-color: rgba(255, 255, 255, 0.3); background-color: #fa4d2d; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; }
+.selection-mode.titlebar:not(headerbar) button:active, .selection-mode.titlebar:not(headerbar) button:checked, headerbar.selection-mode button:active, headerbar.selection-mode button:checked { color: #ffffff; outline-color: rgba(255, 255, 255, 0.3); background-color: #fa4d2d; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; }
 
 .selection-mode.titlebar:not(headerbar) button.flat:backdrop, .selection-mode.titlebar:not(headerbar) button.flat:disabled, .selection-mode.titlebar:not(headerbar) button.flat:backdrop:disabled, headerbar.selection-mode button.flat:backdrop, headerbar.selection-mode button.flat:disabled, headerbar.selection-mode button.flat:backdrop:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
@@ -520,7 +520,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .selection-mode.titlebar:not(headerbar) button.suggested-action:hover, headerbar.selection-mode button.suggested-action:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); border-color: #e52805; }
 
-.selection-mode.titlebar:not(headerbar) button.suggested-action:active, headerbar.selection-mode button.suggested-action:active { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; border-color: #e52805; }
+.selection-mode.titlebar:not(headerbar) button.suggested-action:active, headerbar.selection-mode button.suggested-action:active { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; border-color: #e52805; }
 
 .selection-mode.titlebar:not(headerbar) button.suggested-action:disabled, headerbar.selection-mode button.suggested-action:disabled { color: #979796; background-color: #d3d3d1; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; border-color: #e52805; }
 
@@ -546,7 +546,7 @@ headerbar { color: #f2f1f0; }
 
 headerbar button { color: #f2f1f0; border-width: 0; border-radius: 2px; color: #f2f1f0; outline-color: rgba(76, 76, 76, 0.3); background-color: transparent; box-shadow: none; border-color: transparent; }
 
-headerbar button:hover { color: #f2f1f0; background-color: #7b7b7b; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22), inset 0 0 0 1px rgba(255, 255, 255, 0.04); }
+headerbar button:hover { color: #f2f1f0; background-color: #7b7b7b; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 headerbar button:focus, headerbar button.default { color: #f2f1f0; background-color: #fb6f55; border-color: #fb6f55; box-shadow: none; }
 
@@ -905,31 +905,21 @@ scrollbar.horizontal button.down:disabled { -gtk-icon-source: -gtk-scaled(url("a
 treeview ~ scrollbar.vertical { border-top: 1px solid #bdbdb8; margin-top: -1px; }
 
 /********** Switch * */
-switch { font-weight: bold; font-size: smaller; outline-offset: -4px; border: 1px solid #bdbdb8; border-radius: 99px; color: #4c4c4c; background-color: #d5d5d2; }
+switch { transition: background-color 100ms cubic-bezier(0, 0, 0.2, 1), opacity 250ms cubic-bezier(0, 0, 0.2, 1); margin: 6px 0; padding: 0 2px; border: 5px solid transparent; border-radius: 99px; background-color: #d5d5d2; background-clip: padding-box; font-size: 0; /*switch { font-weight: bold; font-size: smaller; outline-offset: -4px; // similar to the .scale border: 1px solid $borders_color; border-radius: 99px; color: $fg_color; background-color: $dark_fill; &:checked { color: $selected_fg_color; border-color: $selected_borders_color; background-color: $selected_bg_color; } &:disabled { color: $insensitive_fg_color; border-color: $borders_color; background-color: $insensitive_bg_color; } slider { margin: -1px; min-width: 34px; min-height: 18px; border: 1px solid; border-radius: 99px; @include button(normal-alt, $edge: $shadow_color); } &:hover slider { @include button(hover-alt, $edge: $shadow_color); } &:checked slider { border: 1px solid $selected_borders_color; } &:disabled slider { @include button(insensitive); } row:selected & { @if $variant == 'light' { box-shadow: none; border-color: $selected_borders_color; &:backdrop { border-color: $selected_borders_color; } slider:dir(rtl) { border-left-color: $borders_color; } slider:dir(ltr) { border-right-color: $borders_color; } &.slider { &:checked, & { border-color: $selected_borders_color; } } } }*/ }
 
-switch:checked { color: #ffffff; border-color: #e52805; background-color: #fb6f55; }
+switch:checked { background-color: rgba(251, 111, 85, 0.5); }
 
-switch:disabled { color: #979796; border-color: #bdbdb8; background-color: #d3d3d1; }
+switch:disabled { opacity: 0.5; }
 
-switch slider { margin: -1px; min-width: 36px; min-height: 20px; border: 1px solid; border-radius: 99px; color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #f8f8f8; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06), 0 1px rgba(169, 169, 163, 0.1); border-color: transparent; border-bottom-color: transparent; }
+switch slider { transition: all 100ms cubic-bezier(0, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0, 0, 0.2, 1); min-width: 20px; min-height: 20px; margin: -3px -2px; border-radius: 99px; box-shadow: 0 0 0 6px transparent, 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); background-color: #FFFFFF; color: #4c4c4c; }
 
-switch:hover slider { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
+switch:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.3), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-switch:checked slider { border: 1px solid #e52805; }
+switch:focus slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.4), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-switch:disabled slider { color: #979796; background-color: #d3d3d1; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }
+switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.5), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-switch:disabled slider > .label { color: inherit; }
-
-row:selected switch { box-shadow: none; border-color: #e52805; }
-
-row:selected switch:backdrop { border-color: #e52805; }
-
-row:selected switch slider:dir(rtl) { border-left-color: #bdbdb8; }
-
-row:selected switch slider:dir(ltr) { border-right-color: #bdbdb8; }
-
-row:selected switch.slider:checked, row:selected switch.slider { border-color: #e52805; }
+switch:checked slider { background-color: #fb6f55; color: #4c4c4c; }
 
 /************************* Check and Radio items * */
 .view.content-view.check:not(list), iconview.content-view.check:not(list), .nemo-window notebook.content-view.check:not(list), .content-view .tile check:not(list) { -gtk-icon-shadow: none; -gtk-icon-source: -gtk-scaled(url("assets/checkbox-selectionmode.png"), url("assets/checkbox-selectionmode@2.png")); background-color: transparent; min-width: 40px; min-height: 40px; background-image: none; transition: none; box-shadow: none; border-width: 0; }
@@ -1384,7 +1374,7 @@ infobar.info button, infobar.question button, infobar.warning button, infobar.er
 
 infobar.info button:hover, infobar.question button:hover, infobar.warning button:hover, infobar.error button:hover { color: #ffffff; background-color: #fdb7aa; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-infobar.info button:active, infobar.info button:checked, infobar.question button:active, infobar.question button:checked, infobar.warning button:active, infobar.warning button:checked, infobar.error button:active, infobar.error button:checked { color: #ffffff; outline-color: rgba(255, 255, 255, 0.3); background-color: #fa4d2d; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; }
+infobar.info button:active, infobar.info button:checked, infobar.question button:active, infobar.question button:checked, infobar.warning button:active, infobar.warning button:checked, infobar.error button:active, infobar.error button:checked { color: #ffffff; outline-color: rgba(255, 255, 255, 0.3); background-color: #fa4d2d; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; }
 
 infobar.info button:disabled, infobar.question button:disabled, infobar.warning button:disabled, infobar.error button:disabled { color: #fec2b7; background-color: #fc856f; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }
 
@@ -1681,7 +1671,7 @@ XfceHeading, .XfceHeading { margin: 0; padding: 0; border-width: 0; background-i
 
 .xfce4-panel menu button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-.xfce4-panel menu button:active, .xfce4-panel menu button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #84847c; }
+.xfce4-panel menu button:active, .xfce4-panel menu button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #cececb; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a9a9a3; border-bottom-color: #a9a9a3; border-top-color: #919189; }
 
 .xfce4-panel menu button:active:hover, .xfce4-panel menu button:checked:hover { color: #4c4c4c; background-color: #c4c4c0; }
 
