--- a/gtk-3.0/gtk-contained-dark.scss
+++ b/gtk-3.0/gtk-contained-dark.scss
@@ -2,6 +2,7 @@ $variant: 'dark';
 $darker: 'true';
 
 @import 'colors';
+@import 'variables';
 @import 'drawing';
 @import 'common';
 @import 'colors-public';
