--- a/gtk-3.0/gtk-contained.scss
+++ b/gtk-3.0/gtk-contained.scss
@@ -8,6 +8,7 @@ $variant: 'light';
 $darker: 'true'; // For a darker headerbar
 
 @import 'colors';
+@import 'variables';
 @import 'drawing';
 @import 'common';
 @import 'colors-public';
