--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -133,43 +133,35 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 
 // Buttons borders and shadows
 @mixin edges(
-    $s: normal, 
+    $s: normal, //state
     $c: $bg_color,
-    $b: if($c!=$bg_color, _border_color($c), darken($borders_color, 8%)),
-    $sc_strong: transparentize(black, 0.78),
-    $sc_stronger: transparentize(black, 0.75),
-    $sc_weak: transparentize(black, 0.92),
-    $sc_weaker: transparentize(black, 0.94),
-    $sc_weakest: transparentize(black, 0.96)
+    $b: if($c!=$bg_color, _border_color($c), darken($borders_color, 8%)) //border
   ) {
   @if $s == normal {
-    box-shadow: 0 1px 2px $sc_strong, 0 1px 1px $sc_weaker, 0 1px transparentize($b, 0.9);
+    box-shadow: $shadow_normal, 0 1px transparentize($b, 0.9);
     border-color: transparent;
     border-bottom-color: transparent;
   }
   @else if $s == normal-dark {
-    box-shadow: 0 1px 2px $sc_strong, 0 1px 1px $sc_weaker;
+    box-shadow: $shadow_normal;
     border-color: transparent;
   }
   @else if $s == hover {
-    box-shadow: 0 1px 2px $sc_stronger, 0 2px 3px $sc_strong;
-  }
-  @else if $s == hover-dark {
-    box-shadow: 0 1px 2px $sc_stronger, 0 2px 3px $sc_strong;
+    box-shadow: $shadow_hover;
   }
   @else if $s == active {
-    box-shadow: inset 0 0 0 1px $sc_weak, inset 0 2px $sc_weakest;
+    box-shadow: $shadow_active;
     border-color: $b;
     border-bottom-color: $b;
     border-top-color: darken($b, 10%);
   }
   @else if $s == active-dark {
-    box-shadow: inset 0 0 0 1px $sc_weak, inset 0 2px $sc_weakest;
+    box-shadow: $shadow_active;
     border-color: transparent;
   }
   @else if $s == focus {
     border-color: $selected_bg_color;
-    box-shadow: 0 1px 2px $sc_stronger, 0 2px 3px $sc_strong, 0 0 0 1px transparentize($selected_bg_color, 0.7), 0 0 0 2px transparentize($selected_bg_color, 0.9);
+    box-shadow: $shadow_focus;
   }
   @else if $s == focus-dark {
     border-color: $selected_bg_color;
@@ -209,19 +201,11 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     background-color: lighten($c, 9%);
     @include edges(normal);
   }
-  @if $t==normal-alt {
-  // normal button alternative look
-    @include button(normal);
-  }
   @else if $t==hover {
   // hovered button
     color: $tc;
     background-color: lighten($c, 12%);
     @include edges(hover);
-  }
-  @else if $t==hover-alt {
-  // hovered alt button
-    @include button(hover);
   }
   @else if $t==focus {
   // focused button
@@ -284,7 +268,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     @if($darker=='true' or $variant=='dark') {
       color: $dfc;
       background-color: lighten($dc, 18%);
-      @include edges(hover-dark);
+      @include edges(hover);
     }
     @else { @include button(hover); }
   }
