--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -897,19 +897,19 @@ scrollbar.horizontal button.down:disabled { -gtk-icon-source: -gtk-scaled(url("a
 treeview ~ scrollbar.vertical { border-top: 1px solid #272727; margin-top: -1px; }
 
 /********** Switch * */
-switch { transition: background-color 100ms cubic-bezier(0, 0, 0.2, 1), opacity 250ms cubic-bezier(0, 0, 0.2, 1); margin: 6px 0; padding: 0 2px; border: 5px solid transparent; border-radius: 99px; background-color: #404040; background-clip: padding-box; font-size: 0; /*switch { font-weight: bold; font-size: smaller; outline-offset: -4px; // similar to the .scale border: 1px solid $borders_color; border-radius: 99px; color: $fg_color; background-color: $dark_fill; &:checked { color: $selected_fg_color; border-color: $selected_borders_color; background-color: $selected_bg_color; } &:disabled { color: $insensitive_fg_color; border-color: $borders_color; background-color: $insensitive_bg_color; } slider { margin: -1px; min-width: 34px; min-height: 18px; border: 1px solid; border-radius: 99px; @include button(normal-alt, $edge: $shadow_color); } &:hover slider { @include button(hover-alt, $edge: $shadow_color); } &:checked slider { border: 1px solid $selected_borders_color; } &:disabled slider { @include button(insensitive); } row:selected & { @if $variant == 'light' { box-shadow: none; border-color: $selected_borders_color; &:backdrop { border-color: $selected_borders_color; } slider:dir(rtl) { border-left-color: $borders_color; } slider:dir(ltr) { border-right-color: $borders_color; } &.slider { &:checked, & { border-color: $selected_borders_color; } } } }*/ }
+switch { transition: background-color 100ms cubic-bezier(0, 0, 0.2, 1), opacity 250ms cubic-bezier(0, 0, 0.2, 1); margin: 6px 0; padding: 0 2px; border: 5px solid transparent; border-radius: 99px; background-color: #404040; background-clip: padding-box; font-size: 0; }
 
 switch:checked { background-color: rgba(251, 111, 85, 0.5); }
 
 switch:disabled { opacity: 0.5; }
 
-switch slider { transition: all 100ms cubic-bezier(0, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0, 0, 0.2, 1); min-width: 20px; min-height: 20px; margin: -3px -2px; border-radius: 99px; box-shadow: 0 0 0 6px transparent, 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); background-color: #111; color: #f2f1f0; }
+switch slider { transition: all 100ms cubic-bezier(0, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0, 0, 0.2, 1); min-width: 20px; min-height: 20px; margin: -3px -2px; border-radius: 99px; box-shadow: 0 0 0 6px transparent, 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); background-color: #111; color: #f2f1f0; }
 
-switch:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.3), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+switch:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.3), 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-switch:focus slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.4), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+switch:focus slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.4), 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); }
 
-switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.5), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.5), 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 switch:checked slider { background-color: #fb6f55; color: #f2f1f0; }
 
@@ -993,7 +993,7 @@ row:selected scale highlight:disabled, scale row:selected highlight:disabled, ro
 
 .osd scale highlight:disabled, scale .osd highlight:disabled, .osd progressbar progress:disabled, progressbar .osd progress:disabled { border-color: transparent; }
 
-scale { min-height: 10px; min-width: 10px; padding: 12px; }
+scale { min-height: 14px; min-width: 14px; padding: 12px; }
 
 scale fill, scale highlight { margin: -1px; }
 
@@ -1015,7 +1015,7 @@ scale fill:disabled { border-color: transparent; background-color: transparent; 
 
 .osd scale fill:disabled { border-color: transparent; background-color: transparent; }
 
-scale slider { color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: #646464; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06), 0 1px rgba(18, 18, 18, 0.1); border-color: transparent; border-bottom-color: transparent; border: 1px solid #0d0d0d; border-radius: 100%; box-shadow: none; }
+scale slider { color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: #646464; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06), 0 1px rgba(18, 18, 18, 0.1); border-color: transparent; border-bottom-color: transparent; border-radius: 100%; }
 
 scale slider:hover { color: #f2f1f0; background-color: #6c6c6c; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
