--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -905,19 +905,19 @@ scrollbar.horizontal button.down:disabled { -gtk-icon-source: -gtk-scaled(url("a
 treeview ~ scrollbar.vertical { border-top: 1px solid #bdbdb8; margin-top: -1px; }
 
 /********** Switch * */
-switch { transition: background-color 100ms cubic-bezier(0, 0, 0.2, 1), opacity 250ms cubic-bezier(0, 0, 0.2, 1); margin: 6px 0; padding: 0 2px; border: 5px solid transparent; border-radius: 99px; background-color: #d5d5d2; background-clip: padding-box; font-size: 0; /*switch { font-weight: bold; font-size: smaller; outline-offset: -4px; // similar to the .scale border: 1px solid $borders_color; border-radius: 99px; color: $fg_color; background-color: $dark_fill; &:checked { color: $selected_fg_color; border-color: $selected_borders_color; background-color: $selected_bg_color; } &:disabled { color: $insensitive_fg_color; border-color: $borders_color; background-color: $insensitive_bg_color; } slider { margin: -1px; min-width: 34px; min-height: 18px; border: 1px solid; border-radius: 99px; @include button(normal-alt, $edge: $shadow_color); } &:hover slider { @include button(hover-alt, $edge: $shadow_color); } &:checked slider { border: 1px solid $selected_borders_color; } &:disabled slider { @include button(insensitive); } row:selected & { @if $variant == 'light' { box-shadow: none; border-color: $selected_borders_color; &:backdrop { border-color: $selected_borders_color; } slider:dir(rtl) { border-left-color: $borders_color; } slider:dir(ltr) { border-right-color: $borders_color; } &.slider { &:checked, & { border-color: $selected_borders_color; } } } }*/ }
+switch { transition: background-color 100ms cubic-bezier(0, 0, 0.2, 1), opacity 250ms cubic-bezier(0, 0, 0.2, 1); margin: 6px 0; padding: 0 2px; border: 5px solid transparent; border-radius: 99px; background-color: #d5d5d2; background-clip: padding-box; font-size: 0; }
 
 switch:checked { background-color: rgba(251, 111, 85, 0.5); }
 
 switch:disabled { opacity: 0.5; }
 
-switch slider { transition: all 100ms cubic-bezier(0, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0, 0, 0.2, 1); min-width: 20px; min-height: 20px; margin: -3px -2px; border-radius: 99px; box-shadow: 0 0 0 6px transparent, 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); background-color: #FFFFFF; color: #4c4c4c; }
+switch slider { transition: all 100ms cubic-bezier(0, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0, 0, 0.2, 1); min-width: 20px; min-height: 20px; margin: -3px -2px; border-radius: 99px; box-shadow: 0 0 0 6px transparent, 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); background-color: #FFFFFF; color: #4c4c4c; }
 
-switch:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.3), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+switch:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.3), 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
-switch:focus slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.4), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+switch:focus slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.4), 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); }
 
-switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.5), 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+switch:focus:hover slider { box-shadow: 0 0 0 6px rgba(251, 111, 85, 0.5), 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 switch:checked slider { background-color: #fb6f55; color: #4c4c4c; }
 
@@ -1003,7 +1003,7 @@ row:selected scale highlight:disabled, scale row:selected highlight:disabled, ro
 
 .osd scale highlight:disabled, scale .osd highlight:disabled, .osd progressbar progress:disabled, progressbar .osd progress:disabled { border-color: transparent; }
 
-scale { min-height: 10px; min-width: 10px; padding: 12px; }
+scale { min-height: 14px; min-width: 14px; padding: 12px; }
 
 scale fill, scale highlight { margin: -1px; }
 
@@ -1025,7 +1025,7 @@ scale fill:disabled { border-color: transparent; background-color: transparent; 
 
 .osd scale fill:disabled { border-color: transparent; background-color: transparent; }
 
-scale slider { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #f8f8f8; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06), 0 1px rgba(169, 169, 163, 0.1); border-color: transparent; border-bottom-color: transparent; border: 1px solid #a4a49e; border-radius: 100%; box-shadow: none; }
+scale slider { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #f8f8f8; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06), 0 1px rgba(169, 169, 163, 0.1); border-color: transparent; border-bottom-color: transparent; border-radius: 100%; }
 
 scale slider:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
